--- a/site/index.html
+++ b/site/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Hello Coursera</title>
+	<title>Hello Coursera!</title>
 </head>
 <body>
-<h1>Hello coursera</h1>
+<h1>Hello coursera!123456789</h1>
 </body>
 </html>
